Please provide the file changes to generate a commit message.

--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -924,49 +924,73 @@
    - 対象シート: 日報管理シート > 提出ログ
    - 操作: フィルターして取得
    - 条件: 日付が本日のもの
+   - 取得する列: 日付, 名前, 提出時刻, ステータス
 
 3. Geminiに聞く（未提出者の特定）:
-   以下のデータを比較して、本日の日報未提出者を特定してください。
+   あなたは日報の提出状況をチェックするアシスタントです。
+   メンバーマスタに登録されている全員が日報を提出する必要があります。
+   提出ログに名前があるメンバーは提出済み、名前がないメンバーは未提出です。
 
-   【メンバー一覧】
-   {メンバーマスタのデータ}
+   【メンバーマスタ（日報提出が必要な全メンバー）】
+   {メンバーマスタから取得したデータ}
+   ※このリストに載っている人全員が本日の日報を提出する必要があります
 
-   【本日の提出済みリスト】
-   {提出ログのデータ}
+   【本日の提出ログ（提出済みの人のリスト）】
+   {提出ログから取得したデータ}
+   ※このリストに名前がある人は本日提出済みです
 
-   【出力形式】（日本語で出力）
-   ■ 未提出者
+   【やること】
+   1. メンバーマスタの「名前」と提出ログの「名前」を比較してください
+   2. メンバーマスタにいるが、提出ログにいない人が「未提出者」です
+   3. 提出ログの「提出時刻」が17:00より後の人は「遅延提出者」です
+
+   【出力形式】（必ず日本語で出力してください）
+   ■ 未提出者（○名）
    ・山田太郎（営業部）
    ・佐藤花子（開発部）
+   ※未提出者がいない場合は「なし」と記載
 
-   ■ 提出状況
-   ・提出済み: ○名 / 全体: ○名
+   ■ 遅延提出者（○名）
+   ・鈴木一郎（開発部）- 18:30提出
+   ※遅延提出者がいない場合は「なし」と記載
+
+   ■ 提出状況サマリー
+   ・全メンバー数: ○名
+   ・提出済み: ○名
+   ・未提出: ○名
    ・提出率: ○○%
 
-   ■ 判定
-   未提出者あり / 全員提出済み
+   ■ 判定結果
+   「未提出者あり」または「全員提出済み」
 
 4. 条件分岐:
-   - 「未提出者あり」の場合 → Chat DM通知へ
-   - 「全員提出済み」の場合 → 終了
+   - 判定結果が「未提出者あり」の場合 → Chat DM通知へ
+   - 判定結果が「全員提出済み」の場合 → 終了
 
 5. Chat DM送信（自分宛て）:
    【日報未提出アラート】
 
-   本日の日報未提出者をお知らせします。
+   本日の日報提出状況をお知らせします。
 
    {Geminiの出力結果}
 
-   フォローをお願いします。
+   未提出者へのフォローをお願いします。
 
 【出力先】
 - 自分へのChat DM
 
 【事前準備が必要なもの】
 1. 「日報管理シート」という名前のスプレッドシートを作成
-2. その中に「メンバーマスタ」シートを作成（列: 名前, メールアドレス, 部署）
-3. その中に「提出ログ」シートを作成（列: 日付, 名前, 提出時刻, ステータス）
-4. テスト用にメンバー3〜5名分のダミーデータを登録
+2. その中に「メンバーマスタ」シートを作成
+   - A列: 名前
+   - B列: メールアドレス
+   - C列: 部署
+3. その中に「提出ログ」シートを作成
+   - A列: 日付（例: 2024/01/15）
+   - B列: 名前
+   - C列: 提出時刻（例: 17:30）
+   - D列: ステータス（提出済）
+4. テスト用にメンバーマスタに5名登録し、提出ログには3名分だけ登録する（2名が未提出になる）
 
 このエージェントを日本語で作成してください。</div>
             </div>
