Please provide the files or diff to summarize.

--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -920,29 +920,31 @@
    - 操作: すべての行を取得
    - 取得する列: 名前, メールアドレス, 部署
 
-2. スプレッドシート読み込み（本日の提出ログ）:
+2. スプレッドシート読み込み（提出ログ）:
    - 対象シート: 日報管理シート > 提出ログ
-   - 操作: フィルターして取得
-   - 条件: 日付が本日のもの
-   - 取得する列: 日付, 名前, 提出時刻, ステータス
+   - 操作: すべての行を取得
+   - 取得する列: 日付, 名前, 提出時刻
 
 3. Geminiに聞く（未提出者の特定）:
    あなたは日報の提出状況をチェックするアシスタントです。
    メンバーマスタに登録されている全員が日報を提出する必要があります。
-   提出ログに名前があるメンバーは提出済み、名前がないメンバーは未提出です。
 
    【メンバーマスタ（日報提出が必要な全メンバー）】
-   {メンバーマスタから取得したデータ}
+   名前: {名前}
+   部署: {部署}
    ※このリストに載っている人全員が本日の日報を提出する必要があります
 
-   【本日の提出ログ（提出済みの人のリスト）】
-   {提出ログから取得したデータ}
-   ※このリストに名前がある人は本日提出済みです
+   【提出ログ】
+   名前: {名前}
+   提出時刻: {提出時刻}
+   日付: {日付}
 
    【やること】
-   1. メンバーマスタの「名前」と提出ログの「名前」を比較してください
-   2. メンバーマスタにいるが、提出ログにいない人が「未提出者」です
-   3. 提出ログの「提出時刻」が17:00より後の人は「遅延提出者」です
+   1. まず本日の日付を確認してください
+   2. 提出ログから、本日の日付のデータだけを抽出してください
+   3. メンバーマスタの「名前」と、本日の提出ログの「名前」を比較してください
+   4. メンバーマスタにいるが、本日の提出ログにいない人が「未提出者」です
+   5. 本日の提出ログで「提出時刻」が17:00より後の人は「遅延提出者」です
 
    【出力形式】（必ず日本語で出力してください）
    ■ 未提出者（○名）
