Please provide the diff for the files you would like summarized.

--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson4.html
@@ -894,9 +894,19 @@
             </div>
             <div class="highlight-box" style="margin-bottom: 2rem;">
                 <p><strong>デモ推奨:</strong> 4つのエージェントのうち「未提出チェック」がデモに最適です。理由：<br>
-                1. <strong>Scheduledスターター</strong> - Lesson 1-3はChat受信トリガーでしたが、時間トリガーは新しい学び<br>
+                1. <strong>Scheduledスターター</strong> - Lesson 1-3はGmail受信トリガーでしたが、時間トリガーは新しい学び<br>
                 2. <strong>Sheetsからデータ読み込み</strong> - これまでは書き込みのみでしたが、読み込んで処理するのは新しい<br>
                 3. <strong>シンプルで再現しやすい</strong> - 2つのシートを用意すればすぐテスト可能</p>
+            </div>
+
+            <div class="warning-box" style="margin-bottom: 2rem;">
+                <p><strong>このレッスンの「Drive連携」について:</strong> タイトルにあるDrive連携は、主にエージェント4「添付ファイル保存＆内容確認」で実現します。このエージェントでは：</p>
+                <ul style="margin-top: 0.5rem; margin-left: 1rem; color: #92400e;">
+                    <li>添付ファイルをGoogleドライブに自動保存</li>
+                    <li>保存後の{Drive links}変数をGeminiに渡して内容を読み取り</li>
+                    <li>「開いて」キーワードでファイルの中身を分析</li>
+                </ul>
+                <p style="margin-top: 0.5rem;">推奨デモの「未提出チェック」はDriveを使いませんが、エージェント4を試すとDrive連携の威力がわかります。</p>
             </div>
 
             <h3 style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--accent-primary);">エージェント1: 未提出チェック（デモ推奨）</h3>
@@ -946,14 +956,13 @@
    4. メンバーマスタにいるが、本日の提出ログにいない人が「未提出者」です
    5. 本日の提出ログで「提出時刻」が17:00より後の人は「遅延提出者」です
 
-   【出力形式】（必ず日本語で出力してください）
+   【出力形式例】（必ず日本語で出力してください）
    ■ 未提出者（○名）
-   ・山田太郎（営業部）
-   ・佐藤花子（開発部）
+   ・氏名（部署）
    ※未提出者がいない場合は「なし」と記載
 
    ■ 遅延提出者（○名）
-   ・鈴木一郎（開発部）- 18:30提出
+   ・氏名（部署）- （提出時刻）提出
    ※遅延提出者がいない場合は「なし」と記載
 
    ■ 提出状況サマリー
@@ -1013,28 +1022,40 @@
 スケジュール - 毎日21:00
 
 【処理フロー】
-1. スプレッドシート読み込み（本日の提出ログ）:
+1. スプレッドシート読み込み（提出ログ）:
    - 対象シート: 日報管理シート > 提出ログ
-   - 操作: フィルターして取得
-   - 条件: 日付が本日のもの
+   - 操作: すべての行を取得
+   - 取得する列: 日付, 名前, 提出時刻
 
 2. スプレッドシート読み込み（メンバーマスタ）:
    - 対象シート: 日報管理シート > メンバーマスタ
-   - 操作: 行数をカウント（全メンバー数を取得）
+   - 操作: すべての行を取得
+   - 取得する列: 名前, 部署
 
 3. Geminiに聞く（集計）:
    本日の日報提出データを集計してください。
 
-   【本日の提出ログ】
-   {提出ログのデータ}
+   【メンバーマスタ（日報提出が必要な全メンバー）】
+   名前: {名前}
+   部署: {部署}
 
-   【全メンバー数】
-   {メンバー数}
+   【提出ログ】
+   名前: {名前}
+   提出時刻: {提出時刻}
+   日付: {日付}
 
-   【出力形式】（日本語で出力）
+   【やること】
+   1. まず本日の日付を確認してください
+   2. 提出ログから、本日の日付のデータだけを抽出してください
+   3. メンバーマスタの人数と、本日の提出者数を比較してください
+   4. 提出率を計算してください（本日の提出者数 ÷ メンバーマスタの人数 × 100）
+
+   【出力形式例】（日本語で出力）
+   本日の日付: （本日の日付）
    提出数: ○名
-   提出率: ○○%
+   全メンバー数: ○名
    未提出者数: ○名
+   提出率: ○○%
 
 4. 抽出:
    - 提出数
@@ -1068,40 +1089,56 @@
 スケジュール - 毎週金曜日 18:00
 
 【処理フロー】
-1. スプレッドシート読み込み（今週の提出ログ）:
+1. スプレッドシート読み込み（提出ログ）:
    - 対象シート: 日報管理シート > 提出ログ
-   - 操作: フィルターして取得
-   - 条件: 日付が今週（月曜〜金曜）のもの
+   - 操作: すべての行を取得
+   - 取得する列: 日付, 名前, 提出時刻
 
 2. スプレッドシート読み込み（メンバーマスタ）:
    - 対象シート: 日報管理シート > メンバーマスタ
    - 操作: すべての行を取得
+   - 取得する列: 名前, 部署
 
 3. Geminiに聞く（週次分析）:
    今週の日報提出データを分析し、週次レポートを作成してください。
 
-   【今週の提出ログ】
-   {提出ログのデータ}
+   【メンバーマスタ（日報提出が必要な全メンバー）】
+   名前: {名前}
+   部署: {部署}
 
-   【メンバー一覧】
-   {メンバーマスタのデータ}
+   【提出ログ】
+   名前: {名前}
+   提出時刻: {提出時刻}
+   日付: {日付}
 
-   【出力形式】（日本語で出力）
+   【やること】
+   1. まず本日の日付を確認し、今週の月曜日〜金曜日の日付範囲を特定してください
+   2. 提出ログから、今週（月曜〜金曜）の日付のデータだけを抽出してください
+   3. メンバーごとに、今週何日提出したかをカウントしてください
+   4. 各メンバーの提出率を計算してください（提出日数 ÷ 5日 × 100）
+   5. 全員が毎日提出した場合の総数と、実際の提出数を比較してください
+
+   【出力形式例】（日本語で出力）
+   ■ 対象期間
+   （今週の月曜日）〜（今週の金曜日）
+
    ■ 今週のサマリー
    ・総提出数: ○件
+   ・期待提出数: ○件（メンバー数 × 5日）
    ・平均提出率: ○○%
-   ・皆勤賞: （毎日提出した人の名前）
+   ・皆勤賞: （5日すべて提出した人の氏名）
 
    ■ メンバー別提出率ランキング
-   1位: 山田太郎 - 100%（5/5日）
-   2位: 佐藤花子 - 80%（4/5日）
-   ...
+   1位: 氏名 - ○○%（○/5日）
+   2位: 氏名 - ○○%（○/5日）
+   ...（全メンバー分を記載）
 
-   ■ 要フォロー
-   ・提出率80%未満のメンバーとフォロー提案
+   ■ 要フォロー（提出率80%未満）
+   ・氏名 - ○○%（○/5日）
+   ※該当者がいない場合は「なし」と記載
 
    ■ 改善提案
-   ・チーム全体の傾向と改善点
+   ・（チーム全体の傾向と改善点を記載）
 
 4. Chat DM送信（自分宛て）:
    【週次日報サマリー】
