chore: Remove an unspecified file.

--- a/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/index.html
+++ b/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>人事業務ゼロタッチ講座 | Google Workspace Studio</title>
-    <meta name="description" content="Google Workspace Studioで採用・オンボーディング・評価を自動化する！人事業務ゼロタッチ講座">
+    <title>セールスオペレーション効率化講座 | Google Workspace Studio</title>
+    <meta name="description" content="Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
@@ -137,7 +137,7 @@
 <body>
     <nav class="nav">
         <div class="nav-container">
-            <div class="nav-logo">HR Zero Touch</div>
+            <div class="nav-logo">Sales Ops Automation</div>
             <ul class="nav-links">
                 <li><a href="#problem">課題</a></li>
                 <li><a href="#advantage">自動化のメリット</a></li>
@@ -152,12 +152,12 @@
         <div class="hero-content">
             <div class="hero-badge">Google Workspace Studio Course</div>
             <h1 class="hero-title">
-                採用・オンボーディング・評価を自動化<br>
-                <span class="hero-title-accent">人事業務ゼロタッチ化</span>
+                商談・見積・フォローを自動化<br>
+                <span class="hero-title-accent">セールスオペレーション効率化</span>
             </h1>
             <p class="hero-description">
-                Google Workspace Studio と Gemini を活用して、採用連絡・入社手続き・評価面談を80%効率化。
-                人事担当者の工数を大幅に削減します。
+                Google Workspace Studio と Gemini を活用して、リード管理から受注後フォローまでを自動化。
+                営業担当者が本来の商談に集中できる環境を実現します。
             </p>
             <a href="#curriculum" class="hero-cta">
                 カリキュラムを見る
@@ -167,12 +167,12 @@
             </a>
             <div class="hero-stats">
                 <div class="hero-stat">
-                    <div class="hero-stat-value">80%</div>
-                    <div class="hero-stat-label">連絡工数削減</div>
+                    <div class="hero-stat-value">1時間</div>
+                    <div class="hero-stat-label">リード対応時間</div>
                 </div>
                 <div class="hero-stat">
-                    <div class="hero-stat-value">1日</div>
-                    <div class="hero-stat-label">評価収集期間</div>
+                    <div class="hero-stat-value">1分</div>
+                    <div class="hero-stat-label">見積作成時間</div>
                 </div>
                 <div class="hero-stat">
                     <div class="hero-stat-value">5</div>
@@ -186,30 +186,30 @@
         <div class="section-container">
             <div class="section-header">
                 <div class="section-label">Problem & Solution</div>
-                <h2 class="section-title">人事業務の課題を解決</h2>
+                <h2 class="section-title">営業業務の課題を解決</h2>
                 <p class="section-description">
-                    連絡・調整業務から解放され、本来の人材育成に集中
+                    事務作業から解放され、本来の商談に集中
                 </p>
             </div>
             <div class="problem-grid">
                 <div class="problem-card before">
                     <div class="problem-card-header">Before</div>
                     <ul class="problem-card-list">
-                        <li>候補者への連絡・日程調整に時間を取られる</li>
-                        <li>面接評価の収集に5日以上かかる</li>
-                        <li>オンボーディングタスクの管理が煩雑</li>
-                        <li>評価面談の調整に1人30分</li>
-                        <li>社員情報の更新依頼が漏れる</li>
+                        <li>問い合わせへの初回対応が24時間以上かかる</li>
+                        <li>商談フォローアップが漏れて失注</li>
+                        <li>見積作成に10分以上かかり即レスできない</li>
+                        <li>営業レポート作成に週2時間以上費やす</li>
+                        <li>失注原因の分析ができていない</li>
                     </ul>
                 </div>
                 <div class="problem-card after">
                     <div class="problem-card-header">After</div>
                     <ul class="problem-card-list">
-                        <li>選考結果・日程調整を自動連絡</li>
-                        <li>面接終了後に自動で評価依頼→1日で収集</li>
-                        <li>入社日からタスクを自動配信・進捗追跡</li>
-                        <li>空き時間検索で自動日程調整</li>
-                        <li>四半期ごとに自動更新依頼</li>
+                        <li>AIがリードを自動スコアリング、1時間以内に対応</li>
+                        <li>ステージ別に自動フォローで漏れゼロ</li>
+                        <li>テンプレート×自動計算で1分見積</li>
+                        <li>営業レポートは完全自動生成</li>
+                        <li>AIが失注原因を分析してナレッジ蓄積</li>
                     </ul>
                 </div>
             </div>
@@ -222,39 +222,39 @@
                 <div class="section-label">Why Automation</div>
                 <h2 class="section-title">自動化で得られるメリット</h2>
                 <p class="section-description">
-                    採用から育成まで、シームレスな人材マネジメント
+                    リード獲得から受注後まで、営業の全プロセスを効率化
                 </p>
             </div>
             <div class="advantage-grid">
                 <div class="advantage-card">
-                    <div class="advantage-icon">📝</div>
-                    <h3 class="advantage-title">履歴書自動要約</h3>
-                    <p class="advantage-description">Geminiが履歴書・職務経歴書を解析し、スキル・経験を自動抽出。面接官向けサマリーを生成。</p>
-                </div>
-                <div class="advantage-card">
-                    <div class="advantage-icon">📅</div>
-                    <h3 class="advantage-title">面接日程自動調整</h3>
-                    <p class="advantage-description">候補者と面接官の空き時間を自動検索。日程調整リンクを自動送信。</p>
-                </div>
-                <div class="advantage-card">
-                    <div class="advantage-icon">⭐</div>
-                    <h3 class="advantage-title">評価自動収集</h3>
-                    <p class="advantage-description">面接終了をトリガーに評価フォームを自動送信。未入力者には自動リマインド。</p>
-                </div>
-                <div class="advantage-card">
                     <div class="advantage-icon">🎯</div>
-                    <h3 class="advantage-title">オンボーディング管理</h3>
-                    <p class="advantage-description">入社日からタスクを自動配信。Day1, Week1, Month1のチェックポイントを自動確認。</p>
+                    <h3 class="advantage-title">リード自動スコアリング</h3>
+                    <p class="advantage-description">Geminiが問い合わせ内容を分析し、企業規模・予算・緊急度からスコアを自動算出。優先順位を即座に判定。</p>
                 </div>
                 <div class="advantage-card">
                     <div class="advantage-icon">📊</div>
-                    <h3 class="advantage-title">評価面談調整</h3>
-                    <p class="advantage-description">評価期に合わせて上司・部下の面談を自動調整。事前資料も自動配布。</p>
+                    <h3 class="advantage-title">商談ステージ管理</h3>
+                    <p class="advantage-description">商談の進捗状況を自動監視。ステージに応じたフォローアップを自動送信し、停滞商談を即検知。</p>
                 </div>
                 <div class="advantage-card">
-                    <div class="advantage-icon">🔄</div>
-                    <h3 class="advantage-title">情報更新自動化</h3>
-                    <p class="advantage-description">四半期ごとに社員情報更新を依頼。異動・退職時は関係部門に自動通知。</p>
+                    <div class="advantage-icon">📝</div>
+                    <h3 class="advantage-title">見積自動作成</h3>
+                    <p class="advantage-description">商品マスタから価格を自動取得。数量・割引を計算し、見積書PDFを即座に生成・送付。</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">📈</div>
+                    <h3 class="advantage-title">営業ダッシュボード</h3>
+                    <p class="advantage-description">受注率・商談数・売上予測を自動集計。担当者別・商品別の分析もリアルタイムで可視化。</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">💡</div>
+                    <h3 class="advantage-title">失注分析</h3>
+                    <p class="advantage-description">失注理由をGeminiが分析・パターン化。次の提案に活かせる改善点を自動抽出。</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">🔔</div>
+                    <h3 class="advantage-title">自動アラート</h3>
+                    <p class="advantage-description">高スコアリードの即時通知、停滞商談のエスカレーション、期限前リマインドを自動送信。</p>
                 </div>
             </div>
         </div>
@@ -266,16 +266,16 @@
                 <div class="section-label">Curriculum</div>
                 <h2 class="section-title">5つのレッスンで完全習得</h2>
                 <p class="section-description">
-                    採用から評価まで、人事業務を段階的に自動化
+                    リード獲得から失注分析まで、営業業務を段階的に自動化
                 </p>
             </div>
             <div class="curriculum-list">
                 <a href="lesson1.html" class="curriculum-item">
                     <div class="curriculum-number">01</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">採用連絡を80%削減！履歴書AI要約から結果通知まで一気通貫フロー</h3>
+                        <h3 class="curriculum-title">問い合わせ即対応！AIがリードを自動スコアリングして優先順位をつける仕組み</h3>
                         <p class="curriculum-description">
-                            応募受付→書類選考→面接調整→結果連絡。Geminiで履歴書を要約し、選考連絡を自動化。
+                            フォーム受信→リード分析→スコアリング→担当者通知。Geminiでリード情報を自動分析し、優先度を判定。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -285,9 +285,9 @@
                 <a href="lesson2.html" class="curriculum-item">
                     <div class="curriculum-number">02</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">面接終了から1日で評価完了！自動フォーム配信と即時集計システム</h3>
+                        <h3 class="curriculum-title">商談を取りこぼさない！ステージ別に自動フォローが飛ぶ進捗管理システム</h3>
                         <p class="curriculum-description">
-                            評価フォーム送信→回答収集→スコア計算→レポート生成。面接終了で自動評価依頼。
+                            商談ステージ監視→フォロー判定→リマインド送信→エスカレーション。停滞商談を自動検知し、次アクションを提案。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -297,9 +297,9 @@
                 <a href="lesson3.html" class="curriculum-item">
                     <div class="curriculum-number">03</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">入社日から自動スタート！関係者全員にタスクが飛ぶオンボーディング自動化</h3>
+                        <h3 class="curriculum-title">見積作成を10分から1分に！テンプレート×自動計算で即レスポンス</h3>
                         <p class="curriculum-description">
-                            入社日トリガー→タスク配信→進捗追跡→完了確認。新入社員と関係部門へタスクを自動配信。
+                            見積依頼→商品選択→金額計算→PDF生成→送付。商品マスタ連携で見積書を自動生成し、顧客へ即送付。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -309,9 +309,9 @@
                 <a href="lesson4.html" class="curriculum-item">
                     <div class="curriculum-number">04</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">100名分の面談調整が一瞬で完了！カレンダー連携スケジューリング</h3>
+                        <h3 class="curriculum-title">受注率を見える化！商談データを自動集計する営業ダッシュボード</h3>
                         <p class="curriculum-description">
-                            評価期開始→日程調整→事前資料準備→リマインド送信。空き時間検索で自動日程提案。
+                            データ収集→KPI計算→ダッシュボード更新→週次レポート配信。リアルタイムで営業KPIを可視化。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -321,9 +321,9 @@
                 <a href="lesson5.html" class="curriculum-item">
                     <div class="curriculum-number">05</div>
                     <div class="curriculum-content">
-                        <h3 class="curriculum-title">異動・退職の連絡漏れゼロ！関係部門へ自動通知する情報連携フロー</h3>
+                        <h3 class="curriculum-title">失注から学ぶ！AIが原因を分析して次の提案に活かすフィードバックループ</h3>
                         <p class="curriculum-description">
-                            定期チェック→更新依頼→変更検知→関係システム通知。異動・退職時の連携事項を自動化。
+                            失注検知→原因分析→パターン抽出→改善提案→ナレッジ蓄積。失注をナレッジに変える自動分析システム。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -342,34 +342,34 @@
             </div>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">R</div>
-                    <h3 class="feature-title">履歴書解析</h3>
-                    <p class="feature-description">Geminiで履歴書・職務経歴書からスキル・経験を自動抽出するプロンプト設計。</p>
+                    <div class="feature-icon">L</div>
+                    <h3 class="feature-title">リード分析</h3>
+                    <p class="feature-description">Geminiで問い合わせ内容を自動分析し、スコアリングするプロンプト設計。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">C</div>
-                    <h3 class="feature-title">カレンダー連携</h3>
-                    <p class="feature-description">空き時間検索、イベント作成、面接終了トリガーなどカレンダー連携を実装。</p>
+                    <div class="feature-icon">S</div>
+                    <h3 class="feature-title">ステージ管理</h3>
+                    <p class="feature-description">商談ステージに応じた条件分岐と自動フォローアップの設計。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">F</div>
-                    <h3 class="feature-title">フォーム活用</h3>
-                    <p class="feature-description">採用エントリー、評価フォーム、自己評価など各種フォームの自動連携。</p>
+                    <div class="feature-icon">Q</div>
+                    <h3 class="feature-title">見積自動化</h3>
+                    <p class="feature-description">商品マスタ連携、金額計算、PDF生成までの一連のワークフロー構築。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">T</div>
-                    <h3 class="feature-title">タスク管理</h3>
-                    <p class="feature-description">オンボーディングタスクの自動配信・進捗監視・リマインドの実装。</p>
+                    <div class="feature-icon">D</div>
+                    <h3 class="feature-title">ダッシュボード</h3>
+                    <p class="feature-description">スプレッドシートでのKPI自動集計と可視化、レポート自動配信。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">E</div>
-                    <h3 class="feature-title">メール自動化</h3>
-                    <p class="feature-description">選考結果連絡、面接リマインド、更新依頼など各種メールの自動送信。</p>
+                    <div class="feature-icon">A</div>
+                    <h3 class="feature-title">失注分析</h3>
+                    <p class="feature-description">Geminiによる失注原因の分類・パターン化とナレッジベース構築。</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">W</div>
                     <h3 class="feature-title">ワークフロー設計</h3>
-                    <p class="feature-description">採用→入社→評価のライフサイクル全体を通じたワークフロー設計。</p>
+                    <p class="feature-description">リードから受注・失注まで、営業プロセス全体を通じた自動化設計。</p>
                 </div>
             </div>
         </div>
@@ -378,8 +378,8 @@
     <section class="section cta">
         <div class="section-container">
             <div class="cta-content">
-                <h2 class="cta-title">人事業務を<br>今すぐ自動化する</h2>
-                <p class="cta-description">5つのレッスンで、採用・オンボーディング・評価をゼロタッチ化しましょう。</p>
+                <h2 class="cta-title">営業業務を<br>今すぐ効率化する</h2>
+                <p class="cta-description">5つのレッスンで、商談・見積・フォローを完全自動化しましょう。</p>
                 <a href="#curriculum" class="hero-cta">
                     カリキュラムを見る
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
